Preparation for talk

--- a/jupyter/0_python_producer.ipynb
+++ b/jupyter/0_python_producer.ipynb
@@ -21,7 +21,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already satisfied: kafka-python in /opt/conda/anaconda/lib/python3.6/site-packages (2.0.1)\r\n"
+      "Collecting kafka-python\n",
+      "  Downloading kafka_python-2.0.1-py2.py3-none-any.whl (232 kB)\n",
+      "\u001b[K     |████████████████████████████████| 232 kB 6.5 MB/s eta 0:00:01\n",
+      "\u001b[?25hInstalling collected packages: kafka-python\n",
+      "Successfully installed kafka-python-2.0.1\n"
      ]
     }
    ],
@@ -78,7 +82,7 @@
    "outputs": [],
    "source": [
     "read_file_name = \"/home/febiyan_rachman/data.csv\"\n",
-    "read_num_lines = 1000 # Send 1000 lines at a time\n",
+    "read_num_lines = 1000 # Send 100 lines at a time\n",
     "read_sleep_time = 5  # We can change this to simulate 20 seconds data submission at a time\n",
     "kafka_bootstrap_server = \"localhost:9092\"\n",
     "kafka_topic = \"readings_raw\""
