--- a/jupyter/1_pyspark_dataprep.ipynb
+++ b/jupyter/1_pyspark_dataprep.ipynb
@@ -102,50 +102,29 @@
     "kafkaSourceQuery = kafkaSourceDF.writeStream\\\n",
     "    .queryName(\"kafka_source\")\\\n",
     "    .format(\"memory\")\\\n",
-    "    .start()"
+    "    .start()\n",
+    "# Wait 5 seconds before querying\n",
+    "time.sleep(5);"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "+----+--------------------+------------+---------+------+--------------------+-------------+\n",
-      "| key|               value|       topic|partition|offset|           timestamp|timestampType|\n",
-      "+----+--------------------+------------+---------+------+--------------------+-------------+\n",
-      "|null|[7B 22 64 61 74 6...|readings_raw|        0| 74000|2020-03-02 15:26:...|            0|\n",
-      "|null|[7B 22 64 61 74 6...|readings_raw|        0| 74001|2020-03-02 15:26:...|            0|\n",
-      "|null|[7B 22 64 61 74 6...|readings_raw|        0| 74002|2020-03-02 15:26:...|            0|\n",
-      "|null|[7B 22 64 61 74 6...|readings_raw|        0| 74003|2020-03-02 15:26:...|            0|\n",
-      "|null|[7B 22 64 61 74 6...|readings_raw|        0| 74004|2020-03-02 15:26:...|            0|\n",
-      "|null|[7B 22 64 61 74 6...|readings_raw|        0| 74005|2020-03-02 15:26:...|            0|\n",
-      "|null|[7B 22 64 61 74 6...|readings_raw|        0| 74006|2020-03-02 15:26:...|            0|\n",
-      "|null|[7B 22 64 61 74 6...|readings_raw|        0| 74007|2020-03-02 15:26:...|            0|\n",
-      "|null|[7B 22 64 61 74 6...|readings_raw|        0| 74008|2020-03-02 15:26:...|            0|\n",
-      "|null|[7B 22 64 61 74 6...|readings_raw|        0| 74009|2020-03-02 15:26:...|            0|\n",
-      "|null|[7B 22 64 61 74 6...|readings_raw|        0| 74010|2020-03-02 15:26:...|            0|\n",
-      "|null|[7B 22 64 61 74 6...|readings_raw|        0| 74011|2020-03-02 15:26:...|            0|\n",
-      "|null|[7B 22 64 61 74 6...|readings_raw|        0| 74012|2020-03-02 15:26:...|            0|\n",
-      "|null|[7B 22 64 61 74 6...|readings_raw|        0| 74013|2020-03-02 15:26:...|            0|\n",
-      "|null|[7B 22 64 61 74 6...|readings_raw|        0| 74014|2020-03-02 15:26:...|            0|\n",
-      "|null|[7B 22 64 61 74 6...|readings_raw|        0| 74015|2020-03-02 15:26:...|            0|\n",
-      "|null|[7B 22 64 61 74 6...|readings_raw|        0| 74016|2020-03-02 15:26:...|            0|\n",
-      "|null|[7B 22 64 61 74 6...|readings_raw|        0| 74017|2020-03-02 15:26:...|            0|\n",
-      "|null|[7B 22 64 61 74 6...|readings_raw|        0| 74018|2020-03-02 15:26:...|            0|\n",
-      "|null|[7B 22 64 61 74 6...|readings_raw|        0| 74019|2020-03-02 15:26:...|            0|\n",
-      "+----+--------------------+------------+---------+------+--------------------+-------------+\n",
-      "only showing top 20 rows\n",
+      "+---+-----+-----+---------+------+---------+-------------+\n",
+      "|key|value|topic|partition|offset|timestamp|timestampType|\n",
+      "+---+-----+-----+---------+------+---------+-------------+\n",
+      "+---+-----+-----+---------+------+---------+-------------+\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "# Wait 5 seconds before querying\n",
-    "time.sleep(5);\n",
     "spark.sql(\"select * from kafka_source\").show()"
    ]
   },
@@ -326,26 +305,26 @@
       "+--------------------+----------+-------------------+-------------+------------+-------+------------+--------+\n",
       "|           timestamp|message_id|         reading_ts|reading_value|reading_type|plug_id|household_id|house_id|\n",
       "+--------------------+----------+-------------------+-------------+------------+-------+------------+--------+\n",
-      "|2020-03-02 15:26:...|  14240628|2013-09-01 00:22:40|        3.216|           0|      1|           0|       3|\n",
-      "|2020-03-02 15:26:...|  14274618|2013-09-01 00:23:00|        0.788|           0|      0|           0|       4|\n",
-      "|2020-03-02 15:26:...|  14408067|2013-09-01 00:24:20|        0.788|           0|      0|           0|       4|\n",
-      "|2020-03-02 15:26:...|  14408242|2013-09-01 00:24:20|          0.0|           1|      1|           0|       7|\n",
-      "|2020-03-02 15:26:...|  15572218|2013-09-01 00:36:00|          0.0|           1|      2|           0|       7|\n",
-      "|2020-03-02 15:26:...|  15704595|2013-09-01 00:37:20|        3.351|           1|      1|           0|       1|\n",
-      "|2020-03-02 15:26:...|  15871287|2013-09-01 00:39:00|        2.806|           1|      1|           0|       1|\n",
-      "|2020-03-02 15:26:...|  16005317|2013-09-01 00:40:20|          0.0|           1|      1|           0|       3|\n",
-      "|2020-03-02 15:26:...|  16571952|2013-09-01 00:46:00|        0.161|           0|      0|           0|       9|\n",
-      "|2020-03-02 15:26:...|  16737181|2013-09-01 00:47:40|        0.355|           0|      0|           0|       3|\n",
-      "|2020-03-02 15:26:...|  16871327|2013-09-01 00:49:00|         2.25|           0|      1|           0|       7|\n",
-      "|2020-03-02 15:26:...|  16904196|2013-09-01 00:49:20|       15.359|           1|      0|           0|       8|\n",
-      "|2020-03-02 15:26:...|  17336394|2013-09-01 00:53:40|          0.0|           1|      2|           0|       2|\n",
-      "|2020-03-02 15:26:...|  17470731|2013-09-01 00:55:00|        0.161|           0|      0|           0|       9|\n",
-      "|2020-03-02 15:26:...|  19008859|2013-09-01 01:12:20|          0.0|           1|      2|           0|       9|\n",
-      "|2020-03-02 15:27:...|  19939852|2013-09-01 01:21:40|        0.161|           0|      2|           0|       2|\n",
-      "|2020-03-02 15:27:...|  19941181|2013-09-01 01:21:40|          0.0|           1|      0|           0|       5|\n",
-      "|2020-03-02 15:27:...|  20274253|2013-09-01 01:25:00|         2.25|           0|      1|           0|       7|\n",
-      "|2020-03-02 15:27:...|  20373966|2013-09-01 01:26:00|        0.161|           0|      2|           0|       9|\n",
-      "|2020-03-02 15:27:...|  20606958|2013-09-01 01:28:20|         2.25|           0|      1|           0|       5|\n",
+      "|2020-03-04 09:18:...|  31658518|2013-09-01 03:19:00|          0.0|           1|      0|           0|       2|\n",
+      "|2020-03-04 09:18:...|  32092789|2013-09-01 03:23:20|          0.0|           1|      1|           0|       7|\n",
+      "|2020-03-04 09:18:...|  33025115|2013-09-01 03:32:40|        3.216|           0|      1|           0|       9|\n",
+      "|2020-03-04 09:18:...|  33357749|2013-09-01 03:36:00|          0.0|           1|      2|           0|       9|\n",
+      "|2020-03-04 09:18:...|  33456068|2013-09-01 03:37:00|        9.636|           1|      2|           0|       0|\n",
+      "|2020-03-04 09:18:...|  33755379|2013-09-01 03:40:00|       35.105|           0|      1|           0|       1|\n",
+      "|2020-03-04 09:18:...|  34221820|2013-09-01 03:44:40|         3.16|           1|      1|           0|       1|\n",
+      "|2020-03-04 09:19:...|  35120685|2013-09-01 03:53:40|       11.779|           0|      2|           0|       0|\n",
+      "|2020-03-04 09:19:...|  35122369|2013-09-01 03:53:40|        6.345|           1|      1|           0|       8|\n",
+      "|2020-03-04 09:19:...|  35222177|2013-09-01 03:54:40|          0.0|           1|      2|           0|       9|\n",
+      "|2020-03-04 09:19:...|  35387312|2013-09-01 03:56:20|        0.788|           0|      0|           0|       2|\n",
+      "|2020-03-04 09:19:...|  35755293|2013-09-01 04:00:00|          0.0|           1|      0|           0|       5|\n",
+      "|2020-03-04 09:19:...|  36587275|2013-09-01 04:08:20|          0.0|           1|      0|           0|       9|\n",
+      "|2020-03-04 09:19:...|  36620606|2013-09-01 04:08:40|         2.25|           0|      1|           0|       5|\n",
+      "|2020-03-04 09:19:...|  36686905|2013-09-01 04:09:20|        3.219|           0|      0|           0|       5|\n",
+      "|2020-03-04 09:19:...|  37018355|2013-09-01 04:12:40|        0.161|           0|      2|           0|       2|\n",
+      "|2020-03-04 09:19:...|  37685861|2013-09-01 04:19:20|        0.788|           0|      0|           0|       4|\n",
+      "|2020-03-04 09:19:...|  38117719|2013-09-01 04:23:40|          0.0|           1|      0|           0|       4|\n",
+      "|2020-03-04 09:18:...|  31959658|2013-09-01 03:22:00|       35.137|           0|      1|           0|       8|\n",
+      "|2020-03-04 09:18:...|  32026059|2013-09-01 03:22:40|       35.137|           0|      1|           0|       8|\n",
       "+--------------------+----------+-------------------+-------------+------------+-------+------------+--------+\n",
       "only showing top 20 rows\n",
       "\n"
@@ -379,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -401,23 +380,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'id': '0226cc16-5616-4ca7-a484-423e99021fe1',\n",
-       " 'runId': '93ce24a1-a2dc-4369-869e-491ccbf0b441',\n",
+       "{'id': '6715fe46-e91d-41ac-a294-3aa04ab8f020',\n",
+       " 'runId': '41874cf1-0545-4d28-915a-228234a71ad5',\n",
        " 'name': None,\n",
-       " 'timestamp': '2020-03-02T15:28:26.107Z',\n",
+       " 'timestamp': '2020-03-04T09:19:27.252Z',\n",
        " 'batchId': 0,\n",
        " 'numInputRows': 0,\n",
        " 'processedRowsPerSecond': 0.0,\n",
-       " 'durationMs': {'addBatch': 11606,\n",
-       "  'getBatch': 10,\n",
-       "  'queryPlanning': 120,\n",
-       "  'triggerExecution': 11828},\n",
+       " 'durationMs': {'addBatch': 11734,\n",
+       "  'getBatch': 0,\n",
+       "  'getEndOffset': 0,\n",
+       "  'queryPlanning': 106,\n",
+       "  'setOffsetRange': 499,\n",
+       "  'triggerExecution': 12859,\n",
+       "  'walCommit': 46},\n",
        " 'eventTime': {'watermark': '1970-01-01T00:00:00.000Z'},\n",
        " 'stateOperators': [{'numRowsTotal': 0,\n",
        "   'numRowsUpdated': 0,\n",
@@ -427,13 +409,13 @@
        "    'stateOnCurrentVersionSizeBytes': 15799}}],\n",
        " 'sources': [{'description': 'KafkaV2[Subscribe[readings_raw]]',\n",
        "   'startOffset': None,\n",
-       "   'endOffset': {'readings_raw': {'0': 65000}},\n",
+       "   'endOffset': {'readings_raw': {'0': 26000}},\n",
        "   'numInputRows': 0,\n",
        "   'processedRowsPerSecond': 0.0}],\n",
-       " 'sink': {'description': 'org.apache.spark.sql.kafka010.KafkaSourceProvider@1b57f220'}}"
+       " 'sink': {'description': 'org.apache.spark.sql.kafka010.KafkaSourceProvider@275f381f'}}"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -445,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -456,7 +438,7 @@
        " 'isTriggerActive': True}"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -467,51 +449,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'id': '0226cc16-5616-4ca7-a484-423e99021fe1',\n",
-       " 'runId': '93ce24a1-a2dc-4369-869e-491ccbf0b441',\n",
-       " 'name': None,\n",
-       " 'timestamp': '2020-03-02T15:28:37.936Z',\n",
-       " 'batchId': 1,\n",
-       " 'numInputRows': 33000,\n",
-       " 'inputRowsPerSecond': 2789.753994420492,\n",
-       " 'processedRowsPerSecond': 2117.9641871510175,\n",
-       " 'durationMs': {'addBatch': 15369,\n",
-       "  'getBatch': 1,\n",
-       "  'getEndOffset': 0,\n",
-       "  'queryPlanning': 86,\n",
-       "  'setOffsetRange': 48,\n",
-       "  'triggerExecution': 15580,\n",
-       "  'walCommit': 29},\n",
-       " 'eventTime': {'avg': '2013-09-01T03:48:44.664Z',\n",
-       "  'max': '2013-09-01T18:08:00.000Z',\n",
-       "  'min': '2013-08-31T22:00:20.000Z',\n",
-       "  'watermark': '1970-01-01T00:00:00.000Z'},\n",
-       " 'stateOperators': [{'numRowsTotal': 33000,\n",
-       "   'numRowsUpdated': 33000,\n",
-       "   'memoryUsedBytes': 8204303,\n",
-       "   'customMetrics': {'loadedMapCacheHitCount': 200,\n",
-       "    'loadedMapCacheMissCount': 0,\n",
-       "    'stateOnCurrentVersionSizeBytes': 8146703}}],\n",
-       " 'sources': [{'description': 'KafkaV2[Subscribe[readings_raw]]',\n",
-       "   'startOffset': {'readings_raw': {'0': 65000}},\n",
-       "   'endOffset': {'readings_raw': {'0': 98000}},\n",
-       "   'numInputRows': 33000,\n",
-       "   'inputRowsPerSecond': 2789.753994420492,\n",
-       "   'processedRowsPerSecond': 2117.9641871510175}],\n",
-       " 'sink': {'description': 'org.apache.spark.sql.kafka010.KafkaSourceProvider@1b57f220'}}"
-      ]
-     },
-     "execution_count": 25,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "kafkaWriteQuery.lastProgress\n",
     "# kafkaWriteQuery.stop()"
