--- a/jupyter/2a1_spark_case_1_stats_calculation.ipynb
+++ b/jupyter/2a1_spark_case_1_stats_calculation.ipynb
@@ -41,8 +41,8 @@
     {
      "data": {
       "text/plain": [
-       "Spark Web UI available at http://spark-alert-1-stats-m:8088/proxy/application_1583161277657_0002\n",
-       "SparkContext available as 'sc' (version = 2.4.5, master = yarn, app id = application_1583161277657_0002)\n",
+       "Spark Web UI available at http://spark-alert-1-stats-m:8088/proxy/application_1583313183956_0001\n",
+       "SparkContext available as 'sc' (version = 2.4.5, master = yarn, app id = application_1583313183956_0001)\n",
        "SparkSession available as 'spark'\n"
       ]
      },
@@ -238,7 +238,7 @@
     {
      "data": {
       "text/plain": [
-       "streamQuery: org.apache.spark.sql.streaming.StreamingQuery = org.apache.spark.sql.execution.streaming.StreamingQueryWrapper@767b3bb8\n"
+       "streamQuery: org.apache.spark.sql.streaming.StreamingQuery = org.apache.spark.sql.execution.streaming.StreamingQueryWrapper@35ea41\n"
       ]
      },
      "execution_count": 6,
@@ -277,38 +277,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "+----------+-------------------+-------------+------------+-------+------------+--------+\n",
-      "|message_id|         reading_ts|reading_value|reading_type|plug_id|household_id|house_id|\n",
-      "+----------+-------------------+-------------+------------+-------+------------+--------+\n",
-      "| 118504114|2013-09-01 17:53:00|          0.0|           1|      0|           0|       9|\n",
-      "| 115998526|2013-09-01 17:27:20|          0.0|           1|      0|           0|       0|\n",
-      "| 116872749|2013-09-01 17:36:20|          0.0|           1|      1|           0|       9|\n",
-      "| 118371375|2013-09-01 17:51:40|          0.0|           1|      2|           0|       4|\n",
-      "| 117153098|2013-09-01 17:39:20|          0.0|           1|      0|           0|       5|\n",
-      "| 117306922|2013-09-01 17:41:00|       50.627|           1|      0|           0|       8|\n",
-      "| 118503302|2013-09-01 17:53:00|       41.056|           1|      2|           0|       0|\n",
-      "| 118868629|2013-09-01 17:56:40|      122.738|           1|      1|           0|       1|\n",
-      "| 119725890|2013-09-01 18:05:20|          0.0|           1|      0|           0|       6|\n",
-      "| 119590206|2013-09-01 18:04:00|          0.0|           1|      2|           0|       7|\n",
-      "| 119496230|2013-09-01 18:03:00|          0.0|           1|      1|           0|       6|\n",
-      "| 119465366|2013-09-01 18:02:40|          0.0|           1|      2|           0|       9|\n",
-      "| 119136988|2013-09-01 17:59:20|          0.0|           1|      0|           0|       4|\n",
-      "| 119333968|2013-09-01 18:01:20|        40.97|           1|      2|           0|       0|\n",
-      "| 119300642|2013-09-01 18:01:00|          0.0|           1|      2|           0|       2|\n",
-      "| 119336636|2013-09-01 18:01:20|          0.0|           1|      0|           0|       9|\n",
-      "| 119234296|2013-09-01 18:00:20|      140.243|           1|      1|           0|       1|\n",
-      "| 119689344|2013-09-01 18:05:00|          0.0|           1|      1|           0|       3|\n",
-      "| 119465250|2013-09-01 18:02:40|          0.0|           1|      0|           0|       5|\n",
-      "| 119590291|2013-09-01 18:04:00|       62.252|           1|      0|           0|       8|\n",
-      "+----------+-------------------+-------------+------------+-------+------------+--------+\n",
-      "only showing top 20 rows\n",
+      "+----------+----------+-------------+------------+-------+------------+--------+\n",
+      "|message_id|reading_ts|reading_value|reading_type|plug_id|household_id|house_id|\n",
+      "+----------+----------+-------------+------------+-------+------------+--------+\n",
+      "+----------+----------+-------------+------------+-------+------------+--------+\n",
       "\n"
      ]
     }
@@ -457,7 +436,7 @@
      "data": {
       "text/plain": [
        "stats: org.apache.spark.sql.Dataset[StatsState] = [house_id: int, hour: int ... 6 more fields]\n",
-       "query: org.apache.spark.sql.streaming.StreamingQuery = org.apache.spark.sql.execution.streaming.StreamingQueryWrapper@13e3be6\n"
+       "query: org.apache.spark.sql.streaming.StreamingQuery = org.apache.spark.sql.execution.streaming.StreamingQueryWrapper@1e8a01f6\n"
       ]
      },
      "execution_count": 11,
@@ -515,42 +494,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "res8: org.apache.spark.sql.streaming.StreamingQueryProgress =\n",
+       "res6: org.apache.spark.sql.streaming.StreamingQueryProgress =\n",
        "{\n",
-       "  \"id\" : \"8e479727-56f4-41c9-ab47-d5e50904d707\",\n",
-       "  \"runId\" : \"6f8234eb-ce83-4e55-a34a-625defdc8a24\",\n",
+       "  \"id\" : \"b2f43bc0-dd2d-4a4b-b7f3-fea179bf0c1c\",\n",
+       "  \"runId\" : \"d3fbb248-e646-444c-9f57-994705ef4c57\",\n",
        "  \"name\" : null,\n",
-       "  \"timestamp\" : \"2020-03-02T15:29:00.001Z\",\n",
+       "  \"timestamp\" : \"2020-03-04T09:20:09.362Z\",\n",
        "  \"batchId\" : 1,\n",
-       "  \"numInputRows\" : 33000,\n",
-       "  \"inputRowsPerSecond\" : 549.9908334861086,\n",
-       "  \"processedRowsPerSecond\" : 692.7097546128172,\n",
+       "  \"numInputRows\" : 5678,\n",
+       "  \"inputRowsPerSecond\" : 95.96241274991972,\n",
+       "  \"processedRowsPerSecond\" : 155.23840769903762,\n",
        "  \"durationMs\" : {\n",
-       "    \"addBatch\" : 46391,\n",
+       "    \"addBatch\" : 36047,\n",
        "    \"getBatch\" : 0,\n",
        "    \"getEndOffset\" : 0,\n",
-       "    \"queryPlanning\" : 674,\n",
-       "    \"setOffsetRange\" : 1,\n",
-       "    \"triggerExecution\" : 47639,\n",
-       "    \"walCommit\" : 426\n",
+       "    \"queryPlanning\" : 349,\n",
+       "    \"setOffsetRange\" : 2,\n",
+       "    \"triggerExecution\" : 36576,\n",
+       "    \"walCommit\" : 80\n",
        "  },\n",
        "  \"eventTime\" : {\n",
-       "    \"avg\" : \"2013-09-01T03:48:44.664Z\",\n",
-       "    \"max\" : \"2013-09-01T18:08:00.000Z\",\n",
-       "    \"min\" : \"2013-08-31T22:00:20.000Z\",\n",
+       "    \"avg\" : \"2013-09-01T06:30:18.805Z\",\n",
+       "    \"max\" : \"2013-09-01T07:41:20.000Z\",\n",
+       "    \"min\" : \"2013-09-01T05:38:20.000Z\",\n",
        "    \"watermark\" : \"1970-01-01T00:00:00.000Z\"\n",
        "  },\n",
        "  \"stateOperators\" : [ {\n",
-       "    \"numRowsTotal\" : 110..."
+       "    \"numRowsTotal\" : 30,\n",
+       "..."
       ]
      },
-     "execution_count": 17,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
