--- a/jupyter/2b1_spark_case_2_stats_calculation.ipynb
+++ b/jupyter/2b1_spark_case_2_stats_calculation.ipynb
@@ -35,8 +35,8 @@
     {
      "data": {
       "text/plain": [
-       "Spark Web UI available at http://spark-alert-2-stats-m:8088/proxy/application_1583161279001_0002\n",
-       "SparkContext available as 'sc' (version = 2.4.5, master = yarn, app id = application_1583161279001_0002)\n",
+       "Spark Web UI available at http://spark-alert-2-stats-m:8088/proxy/application_1583313188220_0001\n",
+       "SparkContext available as 'sc' (version = 2.4.5, master = yarn, app id = application_1583313188220_0001)\n",
        "SparkSession available as 'spark'\n"
       ]
      },
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -148,7 +148,7 @@
        "defined class StatsState\n"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -232,7 +232,7 @@
     {
      "data": {
       "text/plain": [
-       "streamQuery: org.apache.spark.sql.streaming.StreamingQuery = org.apache.spark.sql.execution.streaming.StreamingQueryWrapper@651e97e2\n"
+       "streamQuery: org.apache.spark.sql.streaming.StreamingQuery = org.apache.spark.sql.execution.streaming.StreamingQueryWrapper@73c3ad20\n"
       ]
      },
      "execution_count": 6,
@@ -271,38 +271,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "+----------+-------------------+-------------+------------+-------+------------+--------+\n",
-      "|message_id|         reading_ts|reading_value|reading_type|plug_id|household_id|house_id|\n",
-      "+----------+-------------------+-------------+------------+-------+------------+--------+\n",
-      "| 118504114|2013-09-01 17:53:00|          0.0|           1|      0|           0|       9|\n",
-      "| 115998526|2013-09-01 17:27:20|          0.0|           1|      0|           0|       0|\n",
-      "| 116872749|2013-09-01 17:36:20|          0.0|           1|      1|           0|       9|\n",
-      "| 118371375|2013-09-01 17:51:40|          0.0|           1|      2|           0|       4|\n",
-      "| 117153098|2013-09-01 17:39:20|          0.0|           1|      0|           0|       5|\n",
-      "| 117306922|2013-09-01 17:41:00|       50.627|           1|      0|           0|       8|\n",
-      "| 118503302|2013-09-01 17:53:00|       41.056|           1|      2|           0|       0|\n",
-      "| 118868629|2013-09-01 17:56:40|      122.738|           1|      1|           0|       1|\n",
-      "| 119725890|2013-09-01 18:05:20|          0.0|           1|      0|           0|       6|\n",
-      "| 119590206|2013-09-01 18:04:00|          0.0|           1|      2|           0|       7|\n",
-      "| 119496230|2013-09-01 18:03:00|          0.0|           1|      1|           0|       6|\n",
-      "| 119465366|2013-09-01 18:02:40|          0.0|           1|      2|           0|       9|\n",
-      "| 119136988|2013-09-01 17:59:20|          0.0|           1|      0|           0|       4|\n",
-      "| 119333968|2013-09-01 18:01:20|        40.97|           1|      2|           0|       0|\n",
-      "| 119300642|2013-09-01 18:01:00|          0.0|           1|      2|           0|       2|\n",
-      "| 119336636|2013-09-01 18:01:20|          0.0|           1|      0|           0|       9|\n",
-      "| 119234296|2013-09-01 18:00:20|      140.243|           1|      1|           0|       1|\n",
-      "| 119689344|2013-09-01 18:05:00|          0.0|           1|      1|           0|       3|\n",
-      "| 119465250|2013-09-01 18:02:40|          0.0|           1|      0|           0|       5|\n",
-      "| 119590291|2013-09-01 18:04:00|       62.252|           1|      0|           0|       8|\n",
-      "+----------+-------------------+-------------+------------+-------+------------+--------+\n",
-      "only showing top 20 rows\n",
+      "+----------+----------+-------------+------------+-------+------------+--------+\n",
+      "|message_id|reading_ts|reading_value|reading_type|plug_id|household_id|house_id|\n",
+      "+----------+----------+-------------+------------+-------+------------+--------+\n",
+      "+----------+----------+-------------+------------+-------+------------+--------+\n",
       "\n"
      ]
     }
@@ -314,42 +293,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "res8: org.apache.spark.sql.streaming.StreamingQueryProgress =\n",
-       "{\n",
-       "  \"id\" : \"4cd512af-ec55-4a22-a1a0-ff5f8f9d1514\",\n",
-       "  \"runId\" : \"d9f1ef0f-335a-41d8-85c9-18087163e7c6\",\n",
-       "  \"name\" : \"readings\",\n",
-       "  \"timestamp\" : \"2020-03-02T15:34:51.144Z\",\n",
-       "  \"batchId\" : 14,\n",
-       "  \"numInputRows\" : 5149,\n",
-       "  \"inputRowsPerSecond\" : 177.05718510367595,\n",
-       "  \"processedRowsPerSecond\" : 511.11772880682946,\n",
-       "  \"durationMs\" : {\n",
-       "    \"addBatch\" : 9909,\n",
-       "    \"getBatch\" : 0,\n",
-       "    \"getEndOffset\" : 0,\n",
-       "    \"queryPlanning\" : 62,\n",
-       "    \"setOffsetRange\" : 3,\n",
-       "    \"triggerExecution\" : 10074,\n",
-       "    \"walCommit\" : 34\n",
-       "  },\n",
-       "  \"eventTime\" : {\n",
-       "    \"avg\" : \"2013-09-02T03:16:41.204Z\",\n",
-       "    \"max\" : \"2013-09-02T04:04:20.000Z\",\n",
-       "    \"min\" : \"2013-09-02T02:19:20.000Z\",\n",
-       "    \"watermark\" : \"2013-09-02T02:35:20.000Z\"\n",
-       "  },\n",
-       "  \"stateOperators\" : [ {\n",
-       "    \"numRowsTotal\" ..."
+       "res2: org.apache.spark.sql.streaming.StreamingQueryProgress = null\n"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -385,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -395,7 +348,7 @@
        "updateAllHouseHourStats: (key: (String, Int), inputs: Iterator[ReadingsInput], groupState: org.apache.spark.sql.streaming.GroupState[StatsState])StatsState\n"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -470,17 +423,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "stats: org.apache.spark.sql.Dataset[StatsState] = [day: string, hour: int ... 6 more fields]\n",
-       "query: org.apache.spark.sql.streaming.StreamingQuery = org.apache.spark.sql.execution.streaming.StreamingQueryWrapper@4f6ae761\n"
+       "query: org.apache.spark.sql.streaming.StreamingQuery = org.apache.spark.sql.execution.streaming.StreamingQueryWrapper@d0e7f40\n"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -514,13 +467,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "res9: org.apache.spark.sql.streaming.StreamingQueryStatus =\n",
+       "res5: org.apache.spark.sql.streaming.StreamingQueryStatus =\n",
        "{\n",
        "  \"message\" : \"Processing new data\",\n",
        "  \"isDataAvailable\" : true,\n",
@@ -528,7 +481,7 @@
        "}\n"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -540,42 +493,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "res11: org.apache.spark.sql.streaming.StreamingQueryProgress =\n",
+       "res7: org.apache.spark.sql.streaming.StreamingQueryProgress =\n",
        "{\n",
-       "  \"id\" : \"06cc3b45-c2f4-4e5a-b018-44f182391393\",\n",
-       "  \"runId\" : \"3a1614d4-5eea-47be-bd80-49fdd6cda09c\",\n",
+       "  \"id\" : \"fab7d9a3-076f-42eb-b8d7-ee2960b7d055\",\n",
+       "  \"runId\" : \"ce63bcad-1115-460b-80ca-0db00f296cc6\",\n",
        "  \"name\" : null,\n",
-       "  \"timestamp\" : \"2020-03-02T15:36:00.000Z\",\n",
-       "  \"batchId\" : 4,\n",
-       "  \"numInputRows\" : 11468,\n",
-       "  \"inputRowsPerSecond\" : 191.13333333333333,\n",
-       "  \"processedRowsPerSecond\" : 552.8612061900401,\n",
+       "  \"timestamp\" : \"2020-03-04T09:26:00.000Z\",\n",
+       "  \"batchId\" : 7,\n",
+       "  \"numInputRows\" : 11755,\n",
+       "  \"inputRowsPerSecond\" : 195.91666666666666,\n",
+       "  \"processedRowsPerSecond\" : 723.6963615095734,\n",
        "  \"durationMs\" : {\n",
-       "    \"addBatch\" : 20488,\n",
-       "    \"getBatch\" : 0,\n",
-       "    \"getEndOffset\" : 1,\n",
-       "    \"queryPlanning\" : 150,\n",
-       "    \"setOffsetRange\" : 1,\n",
-       "    \"triggerExecution\" : 20743,\n",
-       "    \"walCommit\" : 34\n",
+       "    \"addBatch\" : 16041,\n",
+       "    \"getBatch\" : 1,\n",
+       "    \"getEndOffset\" : 0,\n",
+       "    \"queryPlanning\" : 110,\n",
+       "    \"setOffsetRange\" : 2,\n",
+       "    \"triggerExecution\" : 16243,\n",
+       "    \"walCommit\" : 26\n",
        "  },\n",
        "  \"eventTime\" : {\n",
-       "    \"avg\" : \"2013-09-02T06:31:45.667Z\",\n",
-       "    \"max\" : \"2013-09-02T08:28:00.000Z\",\n",
-       "    \"min\" : \"2013-09-02T04:40:40.000Z\",\n",
-       "    \"watermark\" : \"2013-09-02T04:57:00.000Z\"\n",
+       "    \"avg\" : \"2013-09-02T02:22:13.500Z\",\n",
+       "    \"max\" : \"2013-09-02T04:23:20.000Z\",\n",
+       "    \"min\" : \"2013-09-02T00:33:40.000Z\",\n",
+       "    \"watermark\" : \"2013-09-02T00:50:40.000Z\"\n",
        "  },\n",
        "  \"stateOperators\" : [ {\n",
-       "    \"numRowsTotal\" : 12..."
+       "    \"numRowsTotal\" : 24,..."
       ]
      },
-     "execution_count": 23,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
