--- a/jupyter/3_spark_ingest.ipynb
+++ b/jupyter/3_spark_ingest.ipynb
@@ -30,8 +30,8 @@
     {
      "data": {
       "text/plain": [
-       "Spark Web UI available at http://spark-ingest-m:8088/proxy/application_1583161289898_0001\n",
-       "SparkContext available as 'sc' (version = 2.4.5, master = yarn, app id = application_1583161289898_0001)\n",
+       "Spark Web UI available at http://spark-ingest-m:8088/proxy/application_1583313192730_0001\n",
+       "SparkContext available as 'sc' (version = 2.4.5, master = yarn, app id = application_1583313192730_0001)\n",
        "SparkSession available as 'spark'\n"
       ]
      },
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -145,7 +145,7 @@
        "readings: org.apache.spark.sql.Dataset[org.apache.spark.sql.Row] = [message_id: string, reading_ts: timestamp ... 5 more fields]\n"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -177,13 +177,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "readingsQuery: org.apache.spark.sql.streaming.StreamingQuery = org.apache.spark.sql.execution.streaming.StreamingQueryWrapper@101d3c83\n",
+       "readingsQuery: org.apache.spark.sql.streaming.StreamingQuery = org.apache.spark.sql.execution.streaming.StreamingQueryWrapper@607d6f30\n",
        "res0: org.apache.spark.sql.streaming.StreamingQueryStatus =\n",
        "{\n",
        "  \"message\" : \"Processing new data\",\n",
@@ -192,7 +192,7 @@
        "}\n"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -215,26 +215,26 @@
       "+----------+-------------------+-------------+------------+-------+------------+--------+\n",
       "|message_id|         reading_ts|reading_value|reading_type|plug_id|household_id|house_id|\n",
       "+----------+-------------------+-------------+------------+-------+------------+--------+\n",
-      "| 219686108|2013-09-02 10:48:20|          0.0|           1|      1|           0|       3|\n",
-      "| 220252836|2013-09-02 10:54:00|          0.0|           1|      0|           0|       4|\n",
-      "| 219853298|2013-09-02 10:50:00|          0.0|           1|      1|           0|       9|\n",
-      "| 221116806|2013-09-02 11:02:40|      136.521|           1|      1|           0|       1|\n",
-      "| 222516718|2013-09-02 11:16:40|       67.329|           1|      0|           0|       8|\n",
-      "| 222782967|2013-09-02 11:19:20|       60.253|           1|      0|           0|       8|\n",
-      "| 222849589|2013-09-02 11:20:00|          0.0|           1|      1|           0|       9|\n",
-      "| 224446503|2013-09-02 11:36:00|          0.0|           1|      2|           0|       7|\n",
-      "| 225245702|2013-09-02 11:44:00|          0.0|           1|      0|           0|       5|\n",
-      "| 227775956|2013-09-02 12:09:20|          0.0|           1|      1|           0|       5|\n",
-      "| 227308542|2013-09-02 12:04:40|          0.0|           1|      2|           0|       2|\n",
-      "| 227141058|2013-09-02 12:03:00|       10.645|           1|      2|           0|       0|\n",
-      "| 227375853|2013-09-02 12:05:20|          0.0|           1|      1|           0|       5|\n",
-      "| 226777239|2013-09-02 11:59:20|          0.0|           1|      2|           0|       7|\n",
-      "| 229172357|2013-09-02 12:23:20|          0.0|           1|      2|           0|       2|\n",
-      "| 221018384|2013-09-02 11:01:40|          0.0|           1|      0|           0|       9|\n",
-      "| 221917880|2013-09-02 11:10:40|          0.0|           1|      2|           0|       5|\n",
-      "| 222217504|2013-09-02 11:13:40|          0.0|           1|      0|           0|       7|\n",
-      "| 223648548|2013-09-02 11:28:00|          0.0|           1|      1|           0|       5|\n",
-      "| 224412758|2013-09-02 11:35:40|          0.0|           1|      1|           0|       3|\n",
+      "|  47669710|2013-09-01 05:59:20|          0.0|           1|      1|           0|       5|\n",
+      "|  48068742|2013-09-01 06:03:20|          0.0|           1|      1|           0|       5|\n",
+      "|  49066547|2013-09-01 06:13:20|          0.0|           1|      1|           0|       5|\n",
+      "|  49233526|2013-09-01 06:15:00|          0.0|           1|      0|           0|       9|\n",
+      "|  51762125|2013-09-01 06:40:20|          0.0|           1|      1|           0|       7|\n",
+      "|  50863413|2013-09-01 06:31:20|          0.0|           1|      1|           0|       7|\n",
+      "|  50961779|2013-09-01 06:32:20|       42.532|           1|      2|           0|       0|\n",
+      "|  52861089|2013-09-01 06:51:20|          0.0|           1|      2|           0|       9|\n",
+      "|  53557364|2013-09-01 06:58:20|          0.0|           1|      2|           0|       2|\n",
+      "|  53457640|2013-09-01 06:57:20|      164.371|           1|      1|           0|       1|\n",
+      "|  54158098|2013-09-01 07:04:20|          0.0|           1|      2|           0|       9|\n",
+      "|  50596811|2013-09-01 06:28:40|        6.162|           1|      1|           0|       8|\n",
+      "|  55748092|2013-09-01 07:20:20|       53.164|           1|      0|           0|       8|\n",
+      "|  57638304|2013-09-01 07:39:20|          0.0|           1|      2|           0|       2|\n",
+      "|  48268156|2013-09-01 06:05:20|          0.0|           1|      1|           0|       3|\n",
+      "|  48336056|2013-09-01 06:06:00|          0.0|           1|      2|           0|       9|\n",
+      "|  47003516|2013-09-01 05:52:40|          0.0|           1|      1|           0|       4|\n",
+      "|  50463285|2013-09-01 06:27:20|          0.0|           1|      1|           0|       3|\n",
+      "|  52527172|2013-09-01 06:48:00|          0.0|           1|      0|           0|       3|\n",
+      "|  52360334|2013-09-01 06:46:20|          0.0|           1|      2|           0|       2|\n",
       "+----------+-------------------+-------------+------------+-------+------------+--------+\n",
       "only showing top 20 rows\n",
       "\n"
@@ -247,42 +247,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "res18: org.apache.spark.sql.streaming.StreamingQueryProgress =\n",
+       "res2: org.apache.spark.sql.streaming.StreamingQueryProgress =\n",
        "{\n",
-       "  \"id\" : \"f9ecee83-8f34-4875-b682-c10c7344564b\",\n",
-       "  \"runId\" : \"54100149-2487-44fa-8aff-76654e1807dd\",\n",
+       "  \"id\" : \"b97e0a73-27c5-4471-85fb-b03a52580ed7\",\n",
+       "  \"runId\" : \"8dae5afd-f3d0-4860-9896-b8ce54e1518c\",\n",
        "  \"name\" : \"readings\",\n",
-       "  \"timestamp\" : \"2020-03-02T15:38:27.730Z\",\n",
-       "  \"batchId\" : 4,\n",
-       "  \"numInputRows\" : 3126,\n",
-       "  \"inputRowsPerSecond\" : 212.01844818231146,\n",
-       "  \"processedRowsPerSecond\" : 19.3442988155794,\n",
+       "  \"timestamp\" : \"2020-03-04T09:19:39.012Z\",\n",
+       "  \"batchId\" : 0,\n",
+       "  \"numInputRows\" : 0,\n",
+       "  \"processedRowsPerSecond\" : 0.0,\n",
        "  \"durationMs\" : {\n",
-       "    \"addBatch\" : 161285,\n",
-       "    \"getBatch\" : 0,\n",
+       "    \"addBatch\" : 28460,\n",
+       "    \"getBatch\" : 10,\n",
        "    \"getEndOffset\" : 0,\n",
-       "    \"queryPlanning\" : 169,\n",
-       "    \"setOffsetRange\" : 4,\n",
-       "    \"triggerExecution\" : 161598,\n",
-       "    \"walCommit\" : 90\n",
+       "    \"queryPlanning\" : 887,\n",
+       "    \"setOffsetRange\" : 1637,\n",
+       "    \"triggerExecution\" : 31260,\n",
+       "    \"walCommit\" : 64\n",
        "  },\n",
        "  \"eventTime\" : {\n",
-       "    \"avg\" : \"2013-09-02T17:03:07.236Z\",\n",
-       "    \"max\" : \"2013-09-02T17:43:00.000Z\",\n",
-       "    \"min\" : \"2013-09-02T16:29:40.000Z\",\n",
-       "    \"watermark\" : \"2013-09-02T16:48:20.000Z\"\n",
+       "    \"watermark\" : \"1970-01-01T00:00:00.000Z\"\n",
        "  },\n",
        "  \"stateOperators\" : [ {\n",
-       "    \"numRowsTotal..."
+       "    \"numRowsTotal\" : 0,\n",
+       "    \"numRowsUpdated\" : 0,\n",
+       "    \"memoryUsedBytes\" : 44599,\n",
+       "    \"customMetrics\" : {\n",
+       "      \"loadedMapCacheHitCount\" : 0,\n",
+       "      \"loadedMapCacheMissCount\" : 0,\n",
+       "      \"stateOnCurre..."
       ]
      },
-     "execution_count": 25,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -294,13 +296,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "res19: org.apache.spark.sql.streaming.StreamingQueryStatus =\n",
+       "res3: org.apache.spark.sql.streaming.StreamingQueryStatus =\n",
        "{\n",
        "  \"message\" : \"Processing new data\",\n",
        "  \"isDataAvailable\" : true,\n",
@@ -308,7 +310,7 @@
        "}\n"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -328,16 +330,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "ingestQuery: org.apache.spark.sql.streaming.StreamingQuery = org.apache.spark.sql.execution.streaming.StreamingQueryWrapper@7c3fcc66\n"
+       "ingestQuery: org.apache.spark.sql.streaming.StreamingQuery = org.apache.spark.sql.execution.streaming.StreamingQueryWrapper@99f47e8\n"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -358,42 +360,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "res20: org.apache.spark.sql.streaming.StreamingQueryProgress =\n",
+       "res8: org.apache.spark.sql.streaming.StreamingQueryProgress =\n",
        "{\n",
-       "  \"id\" : \"14686b54-a3bf-46b6-9561-1af1d282eb8e\",\n",
-       "  \"runId\" : \"6fb5db6e-b637-4f38-a55b-b80e0db28ad1\",\n",
+       "  \"id\" : \"bbc4556e-1488-4412-aae4-babad5501d44\",\n",
+       "  \"runId\" : \"2e442a93-ba5d-4cbc-a7ac-5f4991694a42\",\n",
        "  \"name\" : null,\n",
-       "  \"timestamp\" : \"2020-03-02T15:38:13.069Z\",\n",
-       "  \"batchId\" : 1,\n",
-       "  \"numInputRows\" : 11229,\n",
-       "  \"inputRowsPerSecond\" : 194.37087812224127,\n",
-       "  \"processedRowsPerSecond\" : 61.10854126418329,\n",
+       "  \"timestamp\" : \"2020-03-04T09:20:13.066Z\",\n",
+       "  \"batchId\" : 0,\n",
+       "  \"numInputRows\" : 28,\n",
+       "  \"processedRowsPerSecond\" : 0.28718832374329467,\n",
        "  \"durationMs\" : {\n",
-       "    \"addBatch\" : 183051,\n",
+       "    \"addBatch\" : 96921,\n",
        "    \"getBatch\" : 0,\n",
-       "    \"getEndOffset\" : 0,\n",
-       "    \"queryPlanning\" : 177,\n",
-       "    \"setOffsetRange\" : 4,\n",
-       "    \"triggerExecution\" : 183755,\n",
-       "    \"walCommit\" : 475\n",
+       "    \"getEndOffset\" : 1,\n",
+       "    \"queryPlanning\" : 221,\n",
+       "    \"setOffsetRange\" : 203,\n",
+       "    \"triggerExecution\" : 97497,\n",
+       "    \"walCommit\" : 106\n",
        "  },\n",
        "  \"eventTime\" : {\n",
-       "    \"avg\" : \"2013-09-02T14:37:02.805Z\",\n",
-       "    \"max\" : \"2013-09-02T16:49:20.000Z\",\n",
-       "    \"min\" : \"2013-09-02T12:34:20.000Z\",\n",
+       "    \"avg\" : \"2013-09-01T07:24:01.428Z\",\n",
+       "    \"max\" : \"2013-09-01T07:41:00.000Z\",\n",
+       "    \"min\" : \"2013-09-01T07:08:00.000Z\",\n",
        "    \"watermark\" : \"1970-01-01T00:00:00.000Z\"\n",
        "  },\n",
        "  \"stateOperators\" : [ {\n",
-       "    \"numRowsTotal\" :..."
+       "    \"numRowsTotal\" : 28,\n",
+       "    \"numRowsUpdated\" : 28,\n",
+       "    \"memoryUsed..."
       ]
      },
-     "execution_count": 27,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -404,13 +407,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "res21: org.apache.spark.sql.streaming.StreamingQueryStatus =\n",
+       "res9: org.apache.spark.sql.streaming.StreamingQueryStatus =\n",
        "{\n",
        "  \"message\" : \"Processing new data\",\n",
        "  \"isDataAvailable\" : true,\n",
@@ -418,7 +421,7 @@
        "}\n"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -429,7 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
