--- a/jupyter/2a2_spark_case_1_anomaly_detection.ipynb
+++ b/jupyter/2a2_spark_case_1_anomaly_detection.ipynb
@@ -37,8 +37,8 @@
     {
      "data": {
       "text/plain": [
-       "Spark Web UI available at http://spark-alert-1-detect-m:8088/proxy/application_1583161287214_0002\n",
-       "SparkContext available as 'sc' (version = 2.4.5, master = yarn, app id = application_1583161287214_0002)\n",
+       "Spark Web UI available at http://spark-alert-1-detect-m:8088/proxy/application_1583313185168_0001\n",
+       "SparkContext available as 'sc' (version = 2.4.5, master = yarn, app id = application_1583313185168_0001)\n",
        "SparkSession available as 'spark'\n"
       ]
      },
@@ -241,7 +241,7 @@
     {
      "data": {
       "text/plain": [
-       "readingsQuery: org.apache.spark.sql.streaming.StreamingQuery = org.apache.spark.sql.execution.streaming.StreamingQueryWrapper@26fe9d32\n",
+       "readingsQuery: org.apache.spark.sql.streaming.StreamingQuery = org.apache.spark.sql.execution.streaming.StreamingQueryWrapper@3e63118e\n",
        "res0: org.apache.spark.sql.streaming.StreamingQueryStatus =\n",
        "{\n",
        "  \"message\" : \"Processing new data\",\n",
@@ -263,38 +263,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "+----------+-------------------+-------------+------------+-------+------------+--------+\n",
-      "|message_id|         reading_ts|reading_value|reading_type|plug_id|household_id|house_id|\n",
-      "+----------+-------------------+-------------+------------+-------+------------+--------+\n",
-      "| 118504114|2013-09-01 17:53:00|          0.0|           1|      0|           0|       9|\n",
-      "| 115998526|2013-09-01 17:27:20|          0.0|           1|      0|           0|       0|\n",
-      "| 116872749|2013-09-01 17:36:20|          0.0|           1|      1|           0|       9|\n",
-      "| 118371375|2013-09-01 17:51:40|          0.0|           1|      2|           0|       4|\n",
-      "| 117153098|2013-09-01 17:39:20|          0.0|           1|      0|           0|       5|\n",
-      "| 117306922|2013-09-01 17:41:00|       50.627|           1|      0|           0|       8|\n",
-      "| 118503302|2013-09-01 17:53:00|       41.056|           1|      2|           0|       0|\n",
-      "| 118868629|2013-09-01 17:56:40|      122.738|           1|      1|           0|       1|\n",
-      "| 119725890|2013-09-01 18:05:20|          0.0|           1|      0|           0|       6|\n",
-      "| 119590206|2013-09-01 18:04:00|          0.0|           1|      2|           0|       7|\n",
-      "| 119496230|2013-09-01 18:03:00|          0.0|           1|      1|           0|       6|\n",
-      "| 119465366|2013-09-01 18:02:40|          0.0|           1|      2|           0|       9|\n",
-      "| 119136988|2013-09-01 17:59:20|          0.0|           1|      0|           0|       4|\n",
-      "| 119333968|2013-09-01 18:01:20|        40.97|           1|      2|           0|       0|\n",
-      "| 119300642|2013-09-01 18:01:00|          0.0|           1|      2|           0|       2|\n",
-      "| 119336636|2013-09-01 18:01:20|          0.0|           1|      0|           0|       9|\n",
-      "| 119234296|2013-09-01 18:00:20|      140.243|           1|      1|           0|       1|\n",
-      "| 119689344|2013-09-01 18:05:00|          0.0|           1|      1|           0|       3|\n",
-      "| 119465250|2013-09-01 18:02:40|          0.0|           1|      0|           0|       5|\n",
-      "| 119590291|2013-09-01 18:04:00|       62.252|           1|      0|           0|       8|\n",
-      "+----------+-------------------+-------------+------------+-------+------------+--------+\n",
-      "only showing top 20 rows\n",
+      "+----------+----------+-------------+------------+-------+------------+--------+\n",
+      "|message_id|reading_ts|reading_value|reading_type|plug_id|household_id|house_id|\n",
+      "+----------+----------+-------------+------------+-------+------------+--------+\n",
+      "+----------+----------+-------------+------------+-------+------------+--------+\n",
       "\n"
      ]
     }
@@ -306,44 +285,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "res18: org.apache.spark.sql.streaming.StreamingQueryProgress =\n",
+       "res2: org.apache.spark.sql.streaming.StreamingQueryProgress =\n",
        "{\n",
-       "  \"id\" : \"a82e2b35-dd47-44e8-bc23-0ef97d2e43d5\",\n",
-       "  \"runId\" : \"70669817-58c1-4f28-9075-4c437d0915a0\",\n",
+       "  \"id\" : \"4d7065fb-beda-47bc-8762-23343f78cfd2\",\n",
+       "  \"runId\" : \"b19775d4-c45a-4f23-acd0-842b2c6f8a07\",\n",
        "  \"name\" : \"readings\",\n",
-       "  \"timestamp\" : \"2020-03-02T15:31:02.071Z\",\n",
-       "  \"batchId\" : 3,\n",
+       "  \"timestamp\" : \"2020-03-04T09:19:31.369Z\",\n",
+       "  \"batchId\" : 1,\n",
        "  \"numInputRows\" : 0,\n",
        "  \"inputRowsPerSecond\" : 0.0,\n",
        "  \"processedRowsPerSecond\" : 0.0,\n",
        "  \"durationMs\" : {\n",
-       "    \"addBatch\" : 46204,\n",
-       "    \"getBatch\" : 0,\n",
-       "    \"getEndOffset\" : 0,\n",
-       "    \"queryPlanning\" : 52,\n",
-       "    \"setOffsetRange\" : 0,\n",
-       "    \"triggerExecution\" : 46862,\n",
-       "    \"walCommit\" : 117\n",
+       "    \"getEndOffset\" : 1,\n",
+       "    \"setOffsetRange\" : 51,\n",
+       "    \"triggerExecution\" : 63\n",
        "  },\n",
        "  \"eventTime\" : {\n",
-       "    \"watermark\" : \"2013-09-01T18:07:00.000Z\"\n",
+       "    \"watermark\" : \"1970-01-01T00:00:00.000Z\"\n",
        "  },\n",
        "  \"stateOperators\" : [ {\n",
-       "    \"numRowsTotal\" : 32,\n",
+       "    \"numRowsTotal\" : 0,\n",
        "    \"numRowsUpdated\" : 0,\n",
-       "    \"memoryUsedBytes\" : 217999,\n",
+       "    \"memoryUsedBytes\" : 44599,\n",
        "    \"customMetrics\" : {\n",
-       "      \"loadedMapCacheHitCount\" : 600,\n",
-       "      \"loadedMapCacheMiss..."
+       "      \"loadedMapCacheHitCount\" : 0,\n",
+       "      \"loadedMapCacheMissCount\" : 0,\n",
+       "      \"stateOnCurrentVersionSizeBytes\" : 15799\n",
+       "    }\n",
+       "  } ],\n",
+       "  \"sources\" : [ {\n",
+       "    \"descr..."
       ]
      },
-     "execution_count": 27,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -363,9 +343,9 @@
       "text/plain": [
        "res3: org.apache.spark.sql.streaming.StreamingQueryStatus =\n",
        "{\n",
-       "  \"message\" : \"Waiting for data to arrive\",\n",
+       "  \"message\" : \"Getting offsets from KafkaV2[Subscribe[readings_prepared]]\",\n",
        "  \"isDataAvailable\" : false,\n",
-       "  \"isTriggerActive\" : false\n",
+       "  \"isTriggerActive\" : true\n",
        "}\n"
       ]
      },
@@ -393,7 +373,7 @@
     {
      "data": {
       "text/plain": [
-       "statsQuery: org.apache.spark.sql.streaming.StreamingQuery = org.apache.spark.sql.execution.streaming.StreamingQueryWrapper@2fcfb0d7\n",
+       "statsQuery: org.apache.spark.sql.streaming.StreamingQuery = org.apache.spark.sql.execution.streaming.StreamingQueryWrapper@7ab28881\n",
        "res4: org.apache.spark.sql.streaming.StreamingQueryStatus =\n",
        "{\n",
        "  \"message\" : \"Getting offsets from KafkaV2[Subscribe[alert_1_stats]]\",\n",
@@ -414,38 +394,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "+--------+----+------------+-----------+-------------------+\n",
-      "|house_id|hour|        mean|    std_dev|            last_ts|\n",
-      "+--------+----+------------+-----------+-------------------+\n",
-      "|       3|  22|0.0065128207| 0.07044692|2013-08-31 22:55:40|\n",
-      "|       1|   0|   3.0833957| 0.50312406|2013-09-01 00:52:20|\n",
-      "|       6|   1| 0.026075268|  0.1238482|2013-09-01 01:24:40|\n",
-      "|       3|   1| 0.028548673| 0.14973912|2013-09-01 01:13:40|\n",
-      "|       7|   4|   1.8362736|  6.7292614|2013-09-01 04:13:40|\n",
-      "|       6|  22|  0.00566346|0.057756197|2013-08-31 22:19:20|\n",
-      "|       9|   4|    1.582257|   6.700217|2013-09-01 04:41:40|\n",
-      "|       8|   3|   10.992943|   3.251793|2013-09-01 03:44:20|\n",
-      "|       1|   2|   2.9568825| 0.30885485|2013-09-01 02:39:40|\n",
-      "|       6|   0|  0.01244898|0.086696796|2013-09-01 00:10:20|\n",
-      "|       4|  22| 0.016184205| 0.19953239|2013-08-31 22:59:20|\n",
-      "|       4|   0|  0.03087729| 0.27790377|2013-09-01 00:38:00|\n",
-      "|       0|   5|    7.169792|   4.563983|2013-09-01 05:52:20|\n",
-      "|       1|  22|    4.302988|  0.4779551|2013-08-31 22:54:20|\n",
-      "|       1|   1|    2.914938| 0.34635767|2013-09-01 01:35:00|\n",
-      "|       6|   5|0.0047924537|0.049341325|2013-09-01 05:14:20|\n",
-      "|       1|   3|     2.88233| 0.36809465|2013-09-01 03:10:20|\n",
-      "|       0|  22|   7.4038663|   4.342299|2013-08-31 22:49:00|\n",
-      "|       3|   5| 0.006023625| 0.06788278|2013-09-01 05:19:40|\n",
-      "|       0|   0|    7.096193|  4.5969253|2013-09-01 00:46:40|\n",
-      "+--------+----+------------+-----------+-------------------+\n",
-      "only showing top 20 rows\n",
+      "+--------+----+----+-------+-------+\n",
+      "|house_id|hour|mean|std_dev|last_ts|\n",
+      "+--------+----+----+-------+-------+\n",
+      "+--------+----+----+-------+-------+\n",
       "\n"
      ]
     }
@@ -457,48 +416,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "res19: org.apache.spark.sql.streaming.StreamingQueryProgress =\n",
+       "res6: org.apache.spark.sql.streaming.StreamingQueryProgress =\n",
        "{\n",
-       "  \"id\" : \"7b4fdc65-37cb-4bb0-9d49-cde36a2874a1\",\n",
-       "  \"runId\" : \"96b30d71-661f-4238-90af-9f082fe2827e\",\n",
+       "  \"id\" : \"ecd4dd6c-94a7-49c0-b50f-068c000459c0\",\n",
+       "  \"runId\" : \"bec3a72c-1e52-423f-8dc7-78dded1a5bb4\",\n",
        "  \"name\" : \"stats\",\n",
-       "  \"timestamp\" : \"2020-03-02T15:31:42.115Z\",\n",
-       "  \"batchId\" : 3,\n",
+       "  \"timestamp\" : \"2020-03-04T09:19:34.075Z\",\n",
+       "  \"batchId\" : 1,\n",
        "  \"numInputRows\" : 0,\n",
        "  \"inputRowsPerSecond\" : 0.0,\n",
        "  \"processedRowsPerSecond\" : 0.0,\n",
        "  \"durationMs\" : {\n",
-       "    \"getEndOffset\" : 1,\n",
-       "    \"setOffsetRange\" : 0,\n",
-       "    \"triggerExecution\" : 1\n",
+       "    \"getEndOffset\" : 0,\n",
+       "    \"setOffsetRange\" : 2,\n",
+       "    \"triggerExecution\" : 2\n",
        "  },\n",
        "  \"stateOperators\" : [ ],\n",
        "  \"sources\" : [ {\n",
        "    \"description\" : \"KafkaV2[Subscribe[alert_1_stats]]\",\n",
        "    \"startOffset\" : {\n",
        "      \"alert_1_stats\" : {\n",
-       "        \"0\" : 110\n",
+       "        \"0\" : 0\n",
        "      }\n",
        "    },\n",
        "    \"endOffset\" : {\n",
        "      \"alert_1_stats\" : {\n",
-       "        \"0\" : 110\n",
+       "        \"0\" : 0\n",
        "      }\n",
        "    },\n",
        "    \"numInputRows\" : 0,\n",
        "    \"inputRowsPerSecond\" : 0.0,\n",
        "    \"processedRowsPerSecond\" : 0.0\n",
        "  } ],\n",
-       "  \"s..."
+       "  \"sink\" ..."
       ]
      },
-     "execution_count": 28,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -589,7 +548,7 @@
     {
      "data": {
       "text/plain": [
-       "peekQuery: org.apache.spark.sql.streaming.StreamingQuery = org.apache.spark.sql.execution.streaming.StreamingQueryWrapper@2e27451\n"
+       "peekQuery: org.apache.spark.sql.streaming.StreamingQuery = org.apache.spark.sql.execution.streaming.StreamingQueryWrapper@5f3351a2\n"
       ]
      },
      "execution_count": 15,
@@ -607,42 +566,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "+----------+-------------------+-------------+------------+-------+------------+--------+----+--------+----------+-------------------+\n",
-      "|message_id|         reading_ts|reading_value|reading_type|plug_id|household_id|house_id|hour|    mean|   std_dev|            last_ts|\n",
-      "+----------+-------------------+-------------+------------+-------+------------+--------+----+--------+----------+-------------------+\n",
-      "| 118802374|2013-09-01 17:56:00|      149.446|           1|      1|           0|       1|  17|138.2499| 10.936097|2013-09-01 17:43:20|\n",
-      "| 117686988|2013-09-01 17:45:00|      152.129|           1|      1|           0|       1|  17|138.2499| 10.936097|2013-09-01 17:43:20|\n",
-      "| 117753806|2013-09-01 17:45:40|      153.223|           1|      1|           0|       1|  17|138.2499| 10.936097|2013-09-01 17:43:20|\n",
-      "|  22304233|2013-09-01 01:45:20|       11.923|           1|      2|           0|       0|   1|7.339263| 4.5548677|2013-09-01 01:16:20|\n",
-      "|  51860382|2013-09-01 06:41:20|        3.265|           1|      1|           0|       1|   6|2.948156|0.28794822|2013-09-01 06:22:00|\n",
-      "|  52625977|2013-09-01 06:49:00|        3.237|           1|      1|           0|       1|   6|2.948156|0.28794822|2013-09-01 06:22:00|\n",
-      "|  51094417|2013-09-01 06:33:40|        3.253|           1|      1|           0|       1|   6|2.948156|0.28794822|2013-09-01 06:22:00|\n",
-      "|  50728988|2013-09-01 06:30:00|        3.237|           1|      1|           0|       1|   6|2.948156|0.28794822|2013-09-01 06:22:00|\n",
-      "|  51261654|2013-09-01 06:35:20|        3.418|           1|      1|           0|       1|   6|2.948156|0.28794822|2013-09-01 06:22:00|\n",
-      "|  52226753|2013-09-01 06:45:00|        3.378|           1|      1|           0|       1|   6|2.948156|0.28794822|2013-09-01 06:22:00|\n",
-      "|  35154309|2013-09-01 03:54:00|        3.355|           1|      1|           0|       1|   3| 2.88233|0.36809465|2013-09-01 03:10:20|\n",
-      "|  34221818|2013-09-01 03:44:40|        3.286|           1|      1|           0|       1|   3| 2.88233|0.36809465|2013-09-01 03:10:20|\n",
-      "|  34288694|2013-09-01 03:45:20|        3.419|           1|      1|           0|       1|   3| 2.88233|0.36809465|2013-09-01 03:10:20|\n",
-      "|  31224726|2013-09-01 03:14:40|        3.319|           1|      1|           0|       1|   3| 2.88233|0.36809465|2013-09-01 03:10:20|\n",
-      "|  33856254|2013-09-01 03:41:00|        3.411|           1|      1|           0|       1|   3| 2.88233|0.36809465|2013-09-01 03:10:20|\n",
-      "|  35087398|2013-09-01 03:53:20|        3.376|           1|      1|           0|       1|   3| 2.88233|0.36809465|2013-09-01 03:10:20|\n",
-      "|  33222912|2013-09-01 03:34:40|        3.322|           1|      1|           0|       1|   3| 2.88233|0.36809465|2013-09-01 03:10:20|\n",
-      "|  33789069|2013-09-01 03:40:20|        3.345|           1|      1|           0|       1|   3| 2.88233|0.36809465|2013-09-01 03:10:20|\n",
-      "|  34854158|2013-09-01 03:51:00|        3.305|           1|      1|           0|       1|   3| 2.88233|0.36809465|2013-09-01 03:10:20|\n",
-      "|  31158530|2013-09-01 03:14:00|         3.35|           1|      1|           0|       1|   3| 2.88233|0.36809465|2013-09-01 03:10:20|\n",
-      "+----------+-------------------+-------------+------------+-------+------------+--------+----+--------+----------+-------------------+\n",
-      "only showing top 20 rows\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "spark.sql(\"select * from anomaly\").show()"
    ]
@@ -712,16 +638,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "ingestQuery: org.apache.spark.sql.streaming.StreamingQuery = org.apache.spark.sql.execution.streaming.StreamingQueryWrapper@26be343d\n"
+       "ingestQuery: org.apache.spark.sql.streaming.StreamingQuery = org.apache.spark.sql.execution.streaming.StreamingQueryWrapper@79a1fc09\n"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -742,72 +668,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "res27: org.apache.spark.sql.streaming.StreamingQueryProgress =\n",
-       "{\n",
-       "  \"id\" : \"4351c9e3-065b-4b26-a830-f6e802042c9e\",\n",
-       "  \"runId\" : \"e4a48e28-09a3-4eb7-9f4b-1481d032bc77\",\n",
-       "  \"name\" : null,\n",
-       "  \"timestamp\" : \"2020-03-02T15:32:11.026Z\",\n",
-       "  \"batchId\" : 0,\n",
-       "  \"numInputRows\" : 66,\n",
-       "  \"processedRowsPerSecond\" : 0.7863977027654985,\n",
-       "  \"durationMs\" : {\n",
-       "    \"addBatch\" : 81093,\n",
-       "    \"getBatch\" : 0,\n",
-       "    \"getEndOffset\" : 1,\n",
-       "    \"queryPlanning\" : 1542,\n",
-       "    \"setOffsetRange\" : 697,\n",
-       "    \"triggerExecution\" : 83927,\n",
-       "    \"walCommit\" : 102\n",
-       "  },\n",
-       "  \"eventTime\" : {\n",
-       "    \"avg\" : \"2013-09-01T19:03:03.428Z\",\n",
-       "    \"max\" : \"2013-09-01T19:19:20.000Z\",\n",
-       "    \"min\" : \"2013-09-01T18:47:20.000Z\",\n",
-       "    \"watermark\" : \"1970-01-01T00:00:00.000Z\"\n",
-       "  },\n",
-       "  \"stateOperators\" : [ {\n",
-       "    \"numRowsTotal\" : 35,\n",
-       "    \"numRowsUpdated\" : 35,\n",
-       "    \"memoryUse..."
-      ]
-     },
-     "execution_count": 37,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "ingestQuery.lastProgress"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "res25: org.apache.spark.sql.streaming.StreamingQueryStatus =\n",
-       "{\n",
-       "  \"message\" : \"Processing new data\",\n",
-       "  \"isDataAvailable\" : true,\n",
-       "  \"isTriggerActive\" : true\n",
-       "}\n"
-      ]
-     },
-     "execution_count": 35,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "ingestQuery.status"
    ]
